--- a/templates/registration/register.html.twig
+++ b/templates/registration/register.html.twig
@@ -1,9 +1,10 @@
-{% extends 'base.html.twig' %}
-
-{% block title %}Register{% endblock %}
-{% block title_sign_in_out_reg %}
-    {% include 'login_button.html.twig' %}
-{% endblock %}
+{#{% extends 'base.html.twig' %}#}
+{#{% include 'admin/menu.html.twig' %}#}
+{#{% block title %}Register{% endblock %}#}
+{#{% block title_sign_in_out_reg %}#}
+{#    {% include 'login_button.html.twig' %}#}
+{#{% endblock %}#}
+{% include 'back_button.html.twig' %}
 {% block body %}
     <h1>Register</h1>
 
