--- a/templates/form/appointment_form.html.twig
+++ b/templates/form/appointment_form.html.twig
@@ -3,5 +3,15 @@
 {#{%  include 'back_button.html.twig' %}#}
 {% block body %}
     <h3>CHOSE YOUR BARBER and RESERVE YOUR APPOINTMENT</h3>
+
+    {% if user.isBarber %}
+        <td><a href={{ path('barber_appointments', {id: user.id} ) }}><button type="button">show barber appointments</button></a></td>
+    {% endif %}
+
+
+    {% if user.isClient and user.nickname %}
+        <td><a href={{ path('barber_appointments', {id: user.id} ) }}><button type="button">reserve barber</button></a></td>
+    {% endif %}
+
 {% endblock %}
 
