--- a/templates/registration/register.html.twig
+++ b/templates/registration/register.html.twig
@@ -1,10 +1,4 @@
-{#{% extends 'base.html.twig' %}#}
-{#{% include 'admin/menu.html.twig' %}#}
-{#{% block title %}Register{% endblock %}#}
-{#{% block title_sign_in_out_reg %}#}
-{#    {% include 'login_button.html.twig' %}#}
-{#{% endblock %}#}
-{% include 'back_button.html.twig' %}
+{% include 'buttons/go_back_logout_buttons.html.twig' %}
 {% block body %}
     <h1>Register</h1>
 
@@ -17,6 +11,7 @@
         }) }}
         {{ form_row(registrationForm.agreeTerms) }}
 
-        <button type="submit" class="btn">Register</button>
+    <a href="{{ path('app_register') }}"><button type="submit" class="button info_btn">Register</button></a>
+    <a href="{{ path('app_login') }}"><button type="button" class="button info_btn">Go To Login</button></a>
     {{ form_end(registrationForm) }}
 {% endblock %}
