--- a/templates/security/login.html.twig
+++ b/templates/security/login.html.twig
@@ -1,26 +1,12 @@
-{#{% extends 'base.html.twig' %}#}
-{#{% include 'admin/menu.html.twig' %}#}
-
-{#{% block title %}Log in!{% endblock %}#}
-
-{#{% block title_sign_in_out_reg %}#}
-{#    {% include 'register_button.html.twig' %}#}
-{#{% endblock %}#}
-{% include 'back_button.html.twig' %}
+{#{% include 'go_back_logout_buttons.html.twig' %}#}
 {% block body %}
     <h1>Log in</h1>
 <form method="post">
+    <div>
     {% if error %}
         <div class="alert alert-danger">{{ error.messageKey|trans(error.messageData, 'security') }}</div>
     {% endif %}
-
-{#    {% if app.user %}#}
-{#        <div class="mb-3">#}
-{#            You are logged in as {{ app.user.userIdentifier }}, <a href="{{ path('app_logout') }}">Logout</a>#}
-{#        </div>#}
-{#    {% endif %}#}
-
-    <h1 class="h3 mb-3 font-weight-normal">Please sign in</h1>
+{#    <h1 class="h3 mb-3 font-weight-normal">Please sign in</h1>#}
     <label for="inputEmail">Email</label>
     <input type="email" value="{{ last_username }}" name="email" id="inputEmail" class="form-control" autocomplete="email" required autofocus>
     <label for="inputPassword">Password</label>
@@ -35,9 +21,8 @@
             <input type="checkbox" name="_remember_me"> Remember me
         </label>
     </div>
-
-    <button class="btn btn-lg btn-primary" type="submit">
-        Sign in
-    </button>
+        <a href="{{ path('app_login') }}"><button type="submit" class="button info_btn">Login</button></a>
+        <a href="{{ path('app_register') }}"><button type="button" class="button info_btn">Go To Register</button></a>
+    </div>
 </form>
 {% endblock %}
