--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -4,11 +4,17 @@
         <meta charset="UTF-8">
         <title>{% block title %}Welcome!{% endblock %}</title>
 {#        <link rel="icon" href="data:image/svg+xml,<svg xmlns=%22http://www.w3.org/2000/svg%22 viewBox=%220 0 128 128%22><text y=%221.2em%22 font-size=%2296%22>⚫️</text><text y=%221.3em%22 x=%220.2em%22 font-size=%2276%22 fill=%22%23fff%22>sf</text></svg>">#}
+            <link rel="icon" type="image/x-icon" href="../favicon.png">
+            <link rel="icon" type="image/png" sizes="32x32" href="../favicon.png">
         {% block stylesheets %}
             <link rel="stylesheet" href="{{ asset('css/app.css') }}">
 {#            <link rel="shortcut icon" type="image/png" href="/public/assets/favicon_barbershop.png">#}
 {#            <link rel="shortcut icon" type="image/png" href={{ asset('assets/favicon_barbershop.png') }}>#}
-            <link rel="shortcut icon" type="image/png" href={{ asset('assets/bs_1.png') }}>
+{#            <link rel="shortcut icon" type="image/png" href={{ asset('assets/bs_1.png') }}>#}
+{#            <link rel="shortcut icon" type="image/png" href={{ asset('assets/favicon.ico') }}>#}
+{#            <link rel="icon" type="image/png"type="image/png" href="../favicon.ico">#}
+{#            <link rel="icon" type="image/png" sizes="32x32" href="../favicon.png">#}
+{#            <link rel="shortcut icon" type="ico" href={{ 'favicon.ico' }}>#}
         {% endblock %}
     </head>
     <body>
