--- a/templates/form/appointment_form.html.twig
+++ b/templates/form/appointment_form.html.twig
@@ -10,56 +10,75 @@
 
     {% if user.isClient and user.nickname %}
 {#        <form id="appointment_form" method="post">#}
-        {{ form_start(form) }}
-        {% block javascripts %}
-            <div class="date-control">
+        <p class="barber_rows">{{ form_start(form) }}</p>
+        <p class="barber_rows">{{ form_errors(form) }}</p>
+        <p class="barber_rows">{{ form_help(form) }}</p>
+        <p class="barber_rows">{{ form_row(form._token) }}</p>
+{#        <p class="barber_rows">{{ form_rest(form) }}</p>#}
+        <p class="barber_rows">{{ form_row(form.procedure_type) }}</p>
+        <p class="barber_rows">{{ form_row(form.date) }}</p>
+        {%  for barber in barbers  %}
+            <p class="barber_rows">{{ " " ~ barber.nick_name }}</p>
+
+        {% endfor %}
+{#        {{ form_row(form.barber) }}#}
+<p class="barber_rows">{{ form_row(form.save) }}</p>
+        <p class="barber_rows">{{ form_end(form, {'render_rest': false,  'attr': {'class': 'form_class'}}) }}</p>
+    {% endif  %}
+
+{% endblock %}
+
+
+
+{#        {% block javascripts %}#}
+{#            <div class="date-control">#}
 {#                <a id="take_out_a_day_arrow" href=""><p><i class="arrow left" id="arrow_left"></i></p></a>#}
-                <button class="arrow_buttons" id="take_out_a_day_arrow"><i class="arrow left" id="arrow_left"></i></button>
-                <label class="date-control-label" for="calendar">Start date:</label>
-                <input class="date-control-input" type="date"
-                                                     id="calendar"
-                                                     name="appointment_start"
-                                                     value="{{ "now"|date(today)}}"
-                                                     min="{{ "now"|date(today)}}"
-                                                     max="{{ "now"|date("2025-12-31")}}"
-                />
-                <button class="arrow_buttons" id="add_a_day_arrow" ><i class="arrow right" id="arrow_right"></i></button>
-            </div>
-        {% endblock %}
-        <div class="drop_down_menu">
-            <label for="barbers" class="barbers_label">Избери барбър</label>
-            <select name="barbers" id="barbers" class="barbers_select">
-                {%  for barber in barbers  %}
-                   <option id="barbers_id" value="{{ barber.id }}"> {{ barber.nick_name }}</option>
-                {% endfor %}
-            </select>
-            <label for="procedures" class="procedures_label">Услуга</label>
-            <select name="procedures" id="procedures" class="procedures_select">
-                {%  for procedure in procedures  %}
-                    <option value="{{ procedure.id }}">{{ procedure.type }}</option>
-                {% endfor %}
-            </select>
-<br>
-            <label for="pickedHours">Избери час час</label>
-            <input type="text" name="pickedHours" id="pickedHours" readonly="readonly" style="color: #787878" value="{{ picked_value }}"/>
-            <table class="appointment-control" id="appointment-control" border="1">
-                <tr>
-                {%  for key, value in table  %}
-                    <th>{{ value }}</th>
-                {% endfor %}
-                </tr>
-                <tr>
-                {%  for key, value in table  %}
-                    <td><input class="form-control"
-                               id="hour_select_{{ key }}"
-                               name="hour_select"
-                               type="image"
-                               src="{{ asset('/assets/hair-cut-tool-small.png') }}"
+{#                <button class="arrow_buttons" id="take_out_a_day_arrow"><i class="arrow left" id="arrow_left"></i></button>#}
+{#                <label class="date-control-label" for="calendar">Start date:</label>#}
+{#                <input class="date-control-input" type="date"#}
+{#                                                     id="calendar"#}
+{#                                                     name="appointment_start"#}
+{#                                                     value="{{ "now"|date(today)}}"#}
+{#                                                     min="{{ "now"|date(today)}}"#}
+{#                                                     max="{{ "now"|date("2025-12-31")}}"#}
+{#                />#}
+{#                <button class="arrow_buttons" id="add_a_day_arrow" ><i class="arrow right" id="arrow_right"></i></button>#}
+{#            </div>#}
+{#        {% endblock %}#}
+{#        <div class="drop_down_menu">#}
+{#            <label for="barbers" class="barbers_label">Избери барбър</label>#}
+{#            <select name="barbers" id="barbers" class="barbers_select">#}
+{#                {%  for barber in barbers  %}#}
+{#                   <option id="barbers_id" value="{{ barber.id }}"> {{ barber.nick_name }}</option>#}
+{#                {% endfor %}#}
+{#            </select>#}
+{#            <label for="procedures" class="procedures_label">Услуга</label>#}
+{#            <select name="procedures" id="procedures" class="procedures_select">#}
+{#                {%  for procedure in procedures  %}#}
+{#                    <option value="{{ procedure.id }}">{{ procedure.type }}</option>#}
+{#                {% endfor %}#}
+{#            </select>#}
+{#<br>#}
+{#            <label for="pickedHours">Избери час час</label>#}
+{#            <input type="text" name="pickedHours" id="pickedHours" readonly="readonly" style="color: #787878" value="{{ picked_value }}"/>#}
+{#            <table class="appointment-control" id="appointment-control" border="1">#}
+{#                <tr>#}
+{#                {%  for key, value in table  %}#}
+{#                    <th>{{ value }}</th>#}
+{#                {% endfor %}#}
+{#                </tr>#}
+{#                <tr>#}
+{#                {%  for key, value in table  %}#}
+{#                    <td><input class="form-control"#}
+{#                               id="hour_select_{{ key }}"#}
+{#                               name="hour_select"#}
+{#                               type="image"#}
+{#                               src="{{ asset('/assets/hair-cut-tool-small.png') }}"#}
 {#                               onclick="pickHour(`{{ [key, value]|json_encode }}`)"#}
-                               onclick="pickHour(`{{ value }}`)"
-                               value="{{ value }}" alt="">
-                    </td>
-                {% endfor %}
+{#                               onclick="pickHour(`{{ value }}`)"#}
+{#                               value="{{ value }}" alt="">#}
+{#                    </td>#}
+{#                {% endfor %}#}
 
 {#                    <td><input class="form-control"#}
 {#                               id="hour_select_1"#}
@@ -77,17 +96,17 @@
 {#                               onclick="pickHour(2)"#}
 {#                               value="2" alt="">#}
 {#                    </td>#}
-                </tr>
-            </table>
-        </div>
+{#                </tr>#}
+{#            </table>#}
+{#        </div>#}
 
-        {{ form_row(form.save) }}
-        {{ form_end(form, {'render_rest': false}) }}
+{#        {{ form_row(form.save) }}#}
+{#        {{ form_end(form, {'render_rest': false}) }}#}
 {#        <td><a id="appointment_form_id" href={{ path('barber_appointments', {id: user.id} ) }}>#}
 {#        </a></td>#}
 {#        <button type="submit" id="appointment_form_button" onclick="redirectToControlLer('{{ user.id }}', '{{ path('barber_appointments', {'id': user.id}) }}')">Запази час</button>#}
 {#    </form>#}
-    {% endif  %}
+{#    {% endif  %}#}
 
-{% endblock %}
+{#{% endblock %}#}
 
